--- a/survey/core/templates/core/substepreport_detail.html
+++ b/survey/core/templates/core/substepreport_detail.html
@@ -21,27 +21,62 @@
         <div class="widget-info margin-top-large">
             <div class="widget-head">
                 <div class="widget-body mt-2 horizontalForm">
-                <li>
-                       <strong>{{ object.comment }}</strong>
-                        <br>
-                        {% if object.user %}
-                            <a href="#" title="View details of user">
-                                <small><i class="la la-user"></i>Sent by: {{ object.user }}</small>
-                            </a><br>{% endif %}
-                        {% if object.comment %}
-                            <small class="site_icon_float" style="">Comment: {{ object.comment }}</small><br>{% endif %}
-                         {% if object.date %}
-                        <small class="site_icon_float" style=""><i class="la la-clock-o"
-                                                                   aria-hidden="true"></i>{{ object.date }}
-                        </small><br>
-                         {% endif %}
-                </li>
-                    {% if object.photo %}
-                    <img src="{{ object.photo.url }}" alt="">
-                    {% endif %}
-                    <div>
-                        <a href="{% url 'core:substep_report_delete' object.id %}"><button>Delete</button></a>
-                    </div>
+                    <div class="widget-head">
+                        <h4><a href="#" title=""><strong>Report Details</strong></a></h4>
+                        <a href="{% url 'core:report_feedback' %}" class="tools pull-right"><button>Feedback</button></a>
+                <!--<li>-->
+                       <!--<strong>{{ object.comment }}</strong>-->
+                        <!--<br>-->
+                        <!--{% if object.user %}-->
+                            <!--<a href="#" title="View details of user">-->
+                                <!--<small><button><i class="la la-user"></i>Sent by: {{ object.user }}</button></small>-->
+                            <!--</a><br>{% endif %}-->
+                        <!--{% if object.comment %}-->
+                            <!--<small class="site_icon_float" style="">Comment: {{ object.comment }}</small><br>{% endif %}-->
+                         <!--{% if object.date %}-->
+                        <!--<small class="site_icon_float" style=""><i class="la la-clock-o"-->
+                                                                   <!--aria-hidden="true"></i>{{ object.date }}-->
+                        <!--</small><br>-->
+                         <!--{% endif %}-->
+                <!--</li>-->
+                    <!--{% if object.photo %}-->
+                    <!--<img src="{{ object.photo.url }}" alt="">-->
+                    <!--{% endif %}-->
+                    <!--<div>-->
+                        <!--<a href="{% url 'core:substep_report_delete' object.id %}" style="color:red;"><button>Delete</button></a>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <table class="display table table-bordered table-striped">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div>
+                                    <strong>{{ object.comment }}</strong>
+                                </div>
+                                 {% if object.photo %}
+                                <div id="photo">
+                                    <img src="{{object.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
+                                </div>
+                                {% endif %}<br>
+                                {% if object.comment %}
+                                    <div class="site_icon_float" style="">Comment: {{ object.comment }}</div><br>
+                                {% endif %}
+                                {% if object.user %}
+                                    <a href="#" title="View details of user">
+                                        <small><button><i class="la la-user" style="color:grey;">Sent by: {{ object.user }}</i></button></small>
+                                    </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                {% endif %}
+                                {% if object.date %}
+                                    <small><button><i class="site_icon_float" style="color:grey;"><i class="la la-clock-o"
+                                                                                                     aria-hidden="true"></i>{{ object.date }}</i></button></small>
+                                    <!--<label>Photo:</label>-->
+                                {% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div>
+                    <small><button style="background-color:red;"><a href="{% url 'core:substep_report_delete' object.id %}">Delete</a></button></small>
                 </div>
             </div>
         </div>
