--- a/survey/core/templates/core/report_feedback.html
+++ b/survey/core/templates/core/report_feedback.html
@@ -10,10 +10,10 @@
             <div class="widget-head">
                 <div class="widget-body mt-2 horizontalForm">
                     <div class="widget-head">
-                        <h4><a href="#" title="">Report FeedBack Create/Update</a></h4>
+                        <h4><a href="#" title="">Report Feedback Create/Update</a></h4>
                     </div>
                     <div class="widget-body">
-                        <h3>SubStep Report {% if object %}Edit{% else %}Add{% endif %}</h3>
+                        <h3>Report Feedback{% if object %}&nbsp;Edit{% else %}&nbsp;Add{% endif %}</h3>
                         <form action="" method="POST" enctype="multipart/form-data" novalidate> {% csrf_token %}
                             {{ form.as_p }}
                             <button type="submit" class="btn btn-xs btn-primary">Submit</button>
