--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 {% load render_bundle from webpack_loader %}
 {% load get_files from webpack_loader %}
+
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
@@ -45,6 +46,7 @@
                         {% if request.user.is_superuser %}
                             <a class="dropdown-item" href="{% url 'core:admin_dashboard' %}">Dashboard</a>
 
+
                         {% else %}
                             <a class="dropdown-item" href="{% url 'core:project_dashboard' request.project.id %}">Dashboard</a>
 
@@ -54,6 +56,41 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+                	<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="la la-bell"></i>
+						<span class="badge badge-warning">5</span>
+					</a>
+					<div class="dropdown-menu large-dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+						<div class="dropdown-header">Notofications (5) </div>
+						{% for report in reports %}
+						<div class="dropdown-item">
+							<div class="notification-item">
+								<div class="notification-avatar pull-left" href="">
+									<i class="avatar-icon la la-bolt"></i>
+								</div>
+								<div class="notification-highlight">
+									<p class="notification-highlight-excerpt">
+										<a href="#">{{report.user}}</a> submitted a report for <a href="#"> {{report.substep}}</a> in site <a href="#">{{report.site}}</a>
+									</p>
+									<p class="notification-highlight-time">{{report.date}}</p>
+								</div>
+							</div>
+						</div>
+                        {% endfor %}
+						<div class="dropdown-divider"></div>
+						<div class="dropdown-header">
+							<div class="row">
+								<div class="col text-left">
+									<a href="#" title="">View All</a>
+								</div>
+								<!--<div class="col text-right">-->
+									<!--<a href="#" title="">Mark all as read</a>-->
+								<!--</div>-->
+							</div>
+						</div>
+					</div>
+				</li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
