--- a/survey/core/templates/core/substepreport_detail.html
+++ b/survey/core/templates/core/substepreport_detail.html
@@ -25,8 +25,13 @@
                         <h4><a href="#" title=""><strong>Report Details</strong></a></h4></div>
                     <div class="tools pull-right">
                         <small><button style="background-color:red;"><a href="{% url 'core:substep_report_delete' object.id %}">Delete</a></button></small>
-                        {% if %}
-                        <!--<a href="{% url 'core:report_feedback' object.pk %}">{% if not object.report_feedback %}<button>Feedback</button>{% endif %}</a></div>-->
+                        <form name="filter" method="POST">{% csrf_token %}
+                            <select id="status" name="status" onChange="form.submit();">
+                            {% for choice in choices %}
+                            <option>{{ choice.1 }}</option>
+                            {% endfor %}
+                        </select></form>
+                        </div>
                 <!--<li>-->
                        <!--<strong>{{ object.comment }}</strong>-->
                         <!--<br>-->
@@ -79,6 +84,7 @@
                         </tr>
                     </tbody>
                 </table>
+                    <a href="{% url 'core:report_feedback' object.pk %}">{% if not object.report_feedback %}<button>Feedback</button>{% endif %}</a>
                 <div>
                     {% if object.report_feedback %}
                         {{object.report_feedback}}
