--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -106,12 +106,12 @@
                                                 {% endif %}
                                                 {% if report.user %}
                                                     <a href="#" title="View details of user">
-                                                        <small><button><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></button></small>
+                                                        <small><i class="la la-user" style="color:grey;">Sent by: {{ report.user }}</i></small>
                                                     </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                                 {% endif %}
                                                 {% if report.date %}
-                                                    <small><button><i class="site_icon_float" style="color:grey;"><i class="la la-clock-o"
-                                                                                                                     aria-hidden="true"></i>{{ report.date }}</i></button></small>
+                                                    <small><i class="site_icon_float" style="color:grey;"><i class="la la-clock-o"
+                                                                                                                     aria-hidden="true"></i>{{ report.date }}</i></small>
                                                     <!--<label>Photo:</label>-->
                                                 {% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             </td>
