--- a/survey/core/templates/core/material_confirm_delete.html
+++ b/survey/core/templates/core/material_confirm_delete.html
@@ -25,7 +25,7 @@
                             <div class="widget-head">
                                 <form action="" method="post">{% csrf_token %}
                                     Are you sure you want to delete {{ object }}
-                                    <input class="btn btn-sm btn-xs btn-primary" type="submit">
+                                    <button type="submit">YES</button>
                                 </form>
                             </div>
                         </div>
