--- a/survey/core/templates/core/project_personnel_list.html
+++ b/survey/core/templates/core/project_personnel_list.html
@@ -7,12 +7,12 @@
         <div class="widget-info margin-top-large">
             <div class="widget-head">
                 <div class="widget-body mt-2 horizontalForm">
+                    <h3>Project Personnel</h3>
                     <a href="{% url 'userrole:field_engineer_create' project.id %}" title="" class="btn btn-sm btn-xs btn-primary" style="float: right;"><i
                                         class="la la-caret-right"></i> Create Field Engineer</a>
-                   <p>
-                   <h3>Project Personnel</h3>
+                   <p><br><br>
                     {% for project_personnel in project_personnel_list %}
-                    {{forloop.counter}}. {{project_personnel.user}} <br>
+                    {{forloop.counter}}. <a href="{% url 'core:user_profile_detail' project_personnel.user.id %}">{{project_personnel.user}}</a> <br>
                     {% empty %}
                     <p>
                         Project Personnel not found.
