update substepreport list

--- a/survey/core/templates/core/substepreport_list.html
+++ b/survey/core/templates/core/substepreport_list.html
@@ -44,7 +44,7 @@
                     {% else %}
                     <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
                     {% endif %}
-                    <li class="breadcrumb-item"><a href="">{{ site }}</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{ site }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Report List</li>
                 </ol>
             </nav>
