--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -59,7 +59,7 @@
                 	<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="la la-bell"></i>
-						<span class="badge badge-warning">5</span>
+						<span class="badge badge-warning">{{count}}</span>
 					</a>
 					<div class="dropdown-menu large-dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 						<div class="dropdown-header">Notifications </div>
