--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -82,7 +82,7 @@
 						<div class="dropdown-header">
 							<div class="row">
 								<div class="col text-left">
-									<a href="#" title="">View All</a>
+									<a href="{% url 'core:notification_list' %}" title="">View All</a>
 								</div>
 								<!--<div class="col text-right">-->
 									<!--<a href="#" title="">Mark all as read</a>-->
