--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -116,7 +116,7 @@
                             <div class="widget-head">
                                 <h4><a href="#" title="">Construction Steps</a></h4>
                                 <a href="{% url 'core:configure_project_steps' project.pk %}" title=""
-                                   class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>Configure Steps</a>
+                                   class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>Add Steps</a>
                                
                             </div>
                             <div class="widget-body">
