--- a/survey/core/templates/core/community_users_list.html
+++ b/survey/core/templates/core/community_users_list.html
@@ -9,13 +9,15 @@
                 <div class="widget-body mt-2 horizontalForm">
                     <h3>Community Users</h3>
                    <p><br><br>
+                    <ul class="submission-list">
                     {% for community_users in community_users_list %}
-                    {{forloop.counter}}. <a href="{% url 'core:user_profile_detail' community_users.user.id %}">{{community_users.user}}</a> <br>
+                    <li>{{forloop.counter}}. <a href="{% url 'core:user_profile_detail' community_users.user.id %}">{{community_users.user}}</a> <br></li>
                     {% empty %}
                     <p>
                         Community Users not found.
                     </p>
                     {% endfor %}
+                    </ul>
                     </p>
                 </div>
             </div>
