--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -230,7 +230,7 @@
                                                  <li>
                                                      <img src="#" alt="">
                                                      <a href="#" title=""><strong>{{ log.call_from }}</strong></a>
-                                                   phoned to
+                                                   called
                                                    <a href="#" title=""><strong>{{ log.call_to }}</strong></a>
                                                      <span class="time"><i class="la la-clock-o"
                                                                            aria-hidden="true"></i>{{ log.time }}</span>
