--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -206,7 +206,26 @@
                                     {% for report in site_reports %}
                                     <li>
                                         {% if report.photo %}
-                                        <img src="{{ report.photo.url }}" alt="">
+                                        <img src="{{ MEDIA_URL }}{{ report.photo.url }}" alt="">
+
+                                        {% endif %}
+                                        <a title="View submission detail"
+                                           href="{% url 'core:substep_report_detail' report.pk %}"><strong>{{report.comment|truncatechars:20 }}</strong></a>
+                                        <br>
+                                        <a href="#" title="View details of user">
+                                            <small><i class="la la-user"></i>{{ report.user }}</small>
+                                        </a>
+                                        <small class="site_icon_float" style=""><i class="la la-clock-o"
+                                                                                   aria-hidden="true"></i>{{ report.date}}
+                                        </small>
+                                    </li>
+                                    {% empty %}
+                                    No Reports Found.
+                                    {% endfor %}
+                                    {% for report in site_substep_reports %}
+                                    <li>
+                                        {% if report.photo %}
+                                        <img src="{{ MEDIA_URL }} {{ report.photo.url }}" alt="">
 
                                         {% endif %}
                                         <a title="View submission detail"
