Plot school locations in the map, make points clickable, show name and address on the pop-up, clicking on the name should open that schools page

--- a/survey/core/templates/core/house_general_construction_materials_form.html
+++ b/survey/core/templates/core/house_general_construction_materials_form.html
@@ -17,6 +17,7 @@
                         <form action="" method="POST" enctype="multipart/form-data" novalidate> {% csrf_token %}
                             {{ form.as_p }}
                             <button type="submit" class="btn btn-xs btn-primary">Submit</button>
+                            <a href="{% url 'core:category_create' project.pk %}">Add Category</a>
                         </form>
                     </div>
                 </div>
