--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -6,12 +6,16 @@
 {% block extra_css %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-          integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-          crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-            integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-            crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+  integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+  crossorigin=""/>
+<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+  integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+  crossorigin=""></script>
+
 {% endblock extra_css %}
 {% block content %}
     <div class="row no-gutters">
@@ -172,7 +176,7 @@
                                                     <a href="{% url 'core:construction_substep_create' project.pk step.pk %}" title=""
                                                     class="btn btn-sm btn-xs btn-primary"><i class="la la-plus"></i>New Substeps</a>
                                                 </div>
-                                                
+
                                             </li>
                                         {% endfor %}
                                     </ul>
@@ -322,7 +326,9 @@
 
 {% block extra_script %}
     {% render_bundle 'project' 'js' %}
-    <script>
+
+
+<script>
         setTimeout(function(){
             $('.alert-success').fadeOut('slow');
         },1000);
@@ -333,37 +339,31 @@
             var locations = JSON.parse("{{ locations|escapejs }}");
             var address = JSON.parse("{{ site_address|escapejs }}");
             var latlong = JSON.parse("{{ site_latlong|escapejs }}");
+            console.log(locations);
 
-            var map = new google.maps.Map(document.getElementById('school-map'), {
-                zoom: 11,
-                center: new google.maps.LatLng(14.5995, 120.9842),
-                mapTypeId: google.maps.MapTypeId.ROADMAP
-            });
+           var map = L.map("school-map").setView([12,124.7],9);
 
-            console.log("hello from map");
+               L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
 
-            var infowindow = new google.maps.InfoWindow();
-            var marker, i;
-            if (locations.length > 1) {
-                console.log(locations)
-                locations = JSON.parse("{{ locations|escapejs }}");
-                map.data.addGeoJson(locations);
-                console.log("hello inside1")
-            }
-            for (i = 0; i < address.length; i++) {
-                marker = new google.maps.Marker({
-                    position: new google.maps.LatLng(latlong[i][1], latlong[i][0]),
-                    map: map
-                });
-                google.maps.event.addListener(marker, 'click', (function (marker, i) {
-                    return function () {
-                        infowindow.setContent(address[i]);
-                        infowindow.open(map);
-                    }
-                })(marker, i));
-            }
+        for(var i=0;i<locations.features.length;i++){
+        console.log(locations.features[i].properties)
+        var popupContent =`<div> <a href="http://bccms.naxa.com.np/core/site-detail/${locations.features[i].properties.pk}/"><h5><mark> ${locations.features[i].properties.name}</mark></h5></a>
+        ${locations.features[i].properties.address}</div>`
+
+
+            L.marker([locations.features[i].geometry.coordinates[1],
+                        locations.features[i].geometry.coordinates[0]])
+            .addTo(map)
+            .bindPopup(popupContent);
+
+
         }
+
+        }
+
+        myMap();
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADDQuj6F2x8p1dEa_oSyinWepcGHrVxvU&callback=myMap"></script>
 
 {% endblock extra_script %}
