--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -210,7 +210,7 @@
 
                                         {% endif %}
                                         <a title="View submission detail"
-                                           href="{% url 'core:substep_report_detail' report.pk %}"><strong>{{report.comment|truncatechars:20 }}</strong></a>
+                                           href="{% url 'core:site_report_detail' report.pk %}"><strong>{{report.comment|truncatechars:20 }}</strong></a>
                                         <br>
                                         <a href="#" title="View details of user">
                                             <small><i class="la la-user"></i>{{ report.user }}</small>
@@ -219,8 +219,6 @@
                                                                                    aria-hidden="true"></i>{{ report.date}}
                                         </small>
                                     </li>
-                                    {% empty %}
-                                    No Reports Found.
                                     {% endfor %}
                                     {% for report in site_substep_reports %}
                                     <li>
