--- a/survey/core/templates/core/project_personnel_list.html
+++ b/survey/core/templates/core/project_personnel_list.html
@@ -1,6 +1,38 @@
 {% extends '_base.html' %}
 
 {% block content %}
+
+<style>
+#table-wrapper {
+  position:relative;
+}
+#table-scroll {
+  height:500px;
+  overflow:auto;
+  margin-top:20px;
+}
+#table-wrapper table {
+  width:100%;
+
+}
+#table-wrapper table * {
+  color:black;
+}
+#table-wrapper table thead th .text {
+  position:absolute;
+  top:-20px;
+  z-index:2;
+  height:20px;
+  width:35%;
+  border:1px solid red;
+}
+.site_icon_float {
+
+    padding: 30px;
+
+}
+</style>
+
 <div class="row no-gutters">
     <div class="col-md-12">
         <nav aria-label="breadcrumb">
@@ -22,16 +54,20 @@
                         <h3>Project Personnel</h3>
                         <a href="{% url 'userrole:field_engineer_create' project.id %}" title="" class="btn btn-sm btn-xs btn-primary" style="float: right;"><i
                                             class="la la-caret-right"></i> Create Field Engineer</a>
-                       <p><br><br>
-                        <ul class="submission-list">
-                        {% for project_personnel in project_personnel_list %}
-                        <li>{{forloop.counter}}. <a href="{% url 'core:user_profile_detail' project_personnel.user.id %}">{{project_personnel.user}}</a> <br></li>
-                        {% empty %}
-                        <p>
-                            Project Personnel not found.
-                        </p>
-                        {% endfor %}
-                        </ul>
+                       <p><br>
+                           <div id="table-wrapper">
+                               <div id="table-scroll">
+                                <ul class="submission-list">
+                                {% for project_personnel in project_personnel_list %}
+                                <li>{{forloop.counter}}. <a href="{% url 'core:user_profile_detail' project_personnel.user.id %}">{{project_personnel.user}}</a> <br></li>
+                                {% empty %}
+                                <p>
+                                    Project Personnel not found.
+                                </p>
+                                {% endfor %}
+                                </ul>
+                                </div>
+                           </div>
                         </p>
                     </div>
                 </div>
