--- a/survey/core/templates/core/construction_substeps_detail.html
+++ b/survey/core/templates/core/construction_substeps_detail.html
@@ -5,6 +5,22 @@
 {% load get_files from webpack_loader %}
 
 {% block content %}
+<div class="row no-gutters">
+    <div class="col-md-12">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">{% if request.user.is_superuser %}
+                <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                <li class="breadcrumb-item"><a
+                        href="{% url 'core:project_dashboard' object.project.pk %}">{{ object.project }}
+                    Dashboard</a></li>
+                {% else %}
+                <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
+                </li>
+                {% endif %}
+            </ol>
+        </nav>
+    </div>
+</div>
 
 <!-- <div class="d-flex justify-content-center">
     <div class="col-md-2 col-lg-5">
