--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -111,7 +111,7 @@
                                 <h4><a href="#" title="">School Map</a></h4>
                             </div>
                             <div class="widget-body">
-                                <div id="school-map"></div>
+                                <div id="school-map" style="height:229px;"></div>
                             </div>
                         </div>
                     </div>
@@ -356,7 +356,7 @@
             var latlong = JSON.parse("{{ site_latlong|escapejs }}");
             console.log(locations);
 
-           var map = L.map("school-map").setView([12,124.7],9);
+           var map = L.map("school-map").setView([11.7,124.7],9);
 
                L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
