update picture list

--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -272,8 +272,8 @@
                 <div class="col-md-6">
                     <div class="widget-info margin-top-large">
                         <div class="widget-head">
-                            <h4><a href="#" title="">Pictures</a></h4>
-                            <a href="#" title="" class="btn btn-sm btn-xs btn-primary"><i
+                            <h4><a href="" title="">Pictures</a></h4>
+                            <a href="{% url 'core:picture_list' %}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                     class="la la-caret-right"></i> View All</a>
                         </div>
                         <div class="widget-body no-padding-top" data-mh="sd-widget">
