--- a/survey/core/templates/core/checklist_all.html
+++ b/survey/core/templates/core/checklist_all.html
@@ -23,7 +23,7 @@
                     <div class="widget-head">
                         <h4><a href="#" title="">CheckList</a></h4>
                             <span class="tools pull-right"><a href="{% url 'core:export' %}"><button>Export Excel</button></a></span>
-                            <!--<scan class="tools pull-right"><a href="{% url 'core:export_checklist_pdf' %}"><button>Export Pdf</button></a></scan>-->
+                            <scan class="tools pull-right"><a href="{% url 'core:export_checklist_pdf' %}"><button>Export Pdf</button></a></scan>
                     </div>
                     <form method="post">{% csrf_token %}
                         <!--{{form.as_p}}-->
