--- a/survey/core/templates/core/sitereport_list.html
+++ b/survey/core/templates/core/sitereport_list.html
@@ -99,6 +99,7 @@
                                                  {% if report.photo %}
                                                 <div id="photo">
                                                     <img src="{{report.photo.url}}" style="height: 80px;float: right;padding: 0px;margin-right: 111px;">
+                                                    <a href="{% url 'core:%}"
                                                 </div>
                                                 {% endif %}<br>
                                                 {% if report.comment %}
