--- a/survey/core/templates/core/picture_list.html
+++ b/survey/core/templates/core/picture_list.html
@@ -4,6 +4,7 @@
 {% load render_bundle from webpack_loader %}
 {% load get_files from webpack_loader %}
 
+
 {% block content %}
 <div class="row no-gutters">
     <div class="col-md-12">
@@ -22,26 +23,55 @@
                     <div class="widget-head">
                         <h4><a href="#" title="">Pictures</a></h4>
                     </div>
-                    <div class="d-flex justify-content-center">
+                    <div class="col-md-12">
                         <div class="dash-right">
                             <div class="widget-info margin-top-large">
-                                <!--<div class="col-md-4">-->
-                                    <!--<div class="photo-holder photo-item margin-top">-->
-                                        <!--{% for item in site_pictures %}-->
-                                        <!--<img src="{{ MEDIA_URL }}{{ item.0 }}" img-title="Hello" alt="">-->
-                                        <!--{% endfor %}-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                {% for item in site_pictures %}
-                                <img src="{{MEDIA_URL}}{{item.0}}">
+
+                        <div class="widget-body no-padding-top" data-mh="sd-widget">
+                            <div class="row">
+                                {% for picture in site_pictures %}
+                                {% if picture.0 %}
+
+                                <div class="col-md-4">
+                                    <div class="photo-holder photo-item margin-top">
+                                        <img src="{{ MEDIA_URL }}{{ picture.0 }}" img-title="Hello" alt="">
+
+                                    </div>
+
+                                </div>
+                                {% endif %}
+
+                                {% empty %}
+                                <p>No Pictures Found.</p>
                                 {% endfor %}
+
+
+                            </div>
+                        </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" id="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content modal-lg">
+            <div class="modal-header">
+                <h6 class="modal-title">&nbsp;</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 {% block  extra_script %}
     {% render_bundle 'project' 'js' %}
