category upgrade and maintain  templates

--- a/survey/core/templates/core/material_form.html
+++ b/survey/core/templates/core/material_form.html
@@ -107,7 +107,7 @@
                                             <div class="form-group col-md-12">
                                                 <label for="inputSchoolName">Category</label>
                                                 {{ form.category }}
-                                                <a href="{% url 'core:category_create' project.pk %}">Add Category</a>
+                                                <!--<a href="{% url 'core:category_create' project.pk %}">Add Category</a>-->
                                             </div>
                                             <div class="form-group col-md-12">
                                                 <label for="inputSchoolName">Description</label>
